# haskell-nix-playground

./: .gitattributes  README.md  cabal.project.freeze  flake.nix  haskell-nix-playground.cabal
materializations/cabal/: default.nix
materializations/haskell-language-server/: default.nix
materializations/haskell-nix-playground/: default.nix
materializations/haskell-nix-playground/.plan.nix/: haskell-nix-playground.nix
materializations/hoogle/: default.nix
