cabal-version:      2.4
name:               haskell-nix-playground
version:            0.1.0.0

author:             kgtkr
maintainer:         contact@kgtkr.net

extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable haskell-nix-playground-app
    main-is:          Main.hs

    build-depends:
        base ^>=4.14.3.0,
        haskell-nix-playground

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite haskell-nix-playground-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
